--- a/4000s25.html
+++ b/4000s25.html
@@ -217,7 +217,7 @@
 
                                                 <p>There will be three fifty-minute <strong>in-class</strong> exams, as well as a final exam.
                                                     <ul>
-                                                    <li class="with-bullet">Midterm #1: Friday, February 14</li>
+                                                    <li class="with-bullet">Midterm #1: Friday, February <del>14</del> 21</li>
                                                     <li class="with-bullet">Midterm #2: Friday, March 28</li>
                                                     <li class="with-bullet">Midterm #3: Friday, April 18</li>
                                                         <li class="with-bullet">Final exam: Wednesday, April 30
