--- a/4000s25.html
+++ b/4000s25.html
@@ -117,6 +117,9 @@
                                                 <h6>Assignments and other course material</h6>
                                             </div>
                                             <div class="module-content col-sm-9">                                            <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #3</span><span class="col-md-2 due-date">due 2/14</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/hw3.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                </li>
+
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #2</span><span class="col-md-2 due-date">due 2/5</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/hw2.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Sample proofs from the axioms</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/axiomproofs.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
@@ -135,6 +138,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">2/7</span><span class="course-task col-md-10">The zero ring. Definition of an integral domain. For $m>1$, the ring $\mathbb{Z}_m$ is a domain if and only if $m$ is prime. Units.
+                                                </span></li> 
+
+
                                                 <li class="with-bullet"><span class="course-date col-md-1">2/5</span><span class="course-task col-md-10">$+$ and $\cdot$ on $\mathbb{Z}_m$. Proof operations are well-defined (label-independent). Properties of $\mathbb{Z}_m$. Definitions of &quot;ring&quot; and &quot;commutative ring&quot;. Examples. Simple facts true in every ring.
                                                 </span></li> 
 
