--- a/vote.html
+++ b/vote.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://forms.gle/ErMRkbDFwQFgv7Pj7">
+        <meta http-equiv="refresh" content="0; url=https://forms.gle/9ghvrt5ZEHjbhpvFA">
         <script type="text/javascript">
-            window.location.href = "https://forms.gle/ErMRkbDFwQFgv7Pj7"
+            window.location.href = "https://forms.gle/9ghvrt5ZEHjbhpvFA"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://forms.gle/ErMRkbDFwQFgv7Pj7'>link </a>.
+        If you are not redirected automatically, follow this <a href='https://forms.gle/9ghvrt5ZEHjbhpvFA'>link </a>.
     </body>
 </html>
