--- a/4000s25.html
+++ b/4000s25.html
@@ -138,6 +138,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">2/10</span><span class="course-task col-md-10"> Definition of a field. Fields are integral domains. For $m>1$, the ring $\mathbb{Z}_m$ is a field if and only if $m$ is prime. The element $\bar{a}$ in $\mathbb{Z}_m$ is a unit if and only if $\gcd(a,m)=1$. 
+                                                </span></li> 
+
+
                                                 <li class="with-bullet"><span class="course-date col-md-1">2/7</span><span class="course-task col-md-10">The zero ring. Definition of an integral domain. For $m>1$, the ring $\mathbb{Z}_m$ is a domain if and only if $m$ is prime. Units.
                                                 </span></li> 
 
