--- a/4000s25.html
+++ b/4000s25.html
@@ -138,6 +138,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">2/12</span><span class="course-task col-md-10"> Computing inverses mod $m$. Solving linear congruences $ax\equiv b\pmod{m}$: a method that works when $\gcd(a,m)=1$, and a method for reducing to that case (or showing no solutions). Convention: What we mean by $nr$, if $n \in \mathbb{Z}$ and $r \in R$ (a ring).
+                                                </span></li>    
+
+
                                                 <li class="with-bullet"><span class="course-date col-md-1">2/10</span><span class="course-task col-md-10"> Definition of a field. Fields are integral domains. For $m>1$, the ring $\mathbb{Z}_m$ is a field if and only if $m$ is prime. The element $\bar{a}$ in $\mathbb{Z}_m$ is a unit if and only if $\gcd(a,m)=1$. 
                                                 </span></li> 
 
