--- a/4000s25.html
+++ b/4000s25.html
@@ -138,7 +138,7 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
-                                                <li class="with-bullet"><span class="course-date col-md-1">2/12</span><span class="course-task col-md-10"> Computing inverses mod $m$. Solving linear congruences $ax\equiv b\pmod{m}$: a method that works when $\gcd(a,m)=1$, and a method for reducing to that case (or showing no solutions). Convention: What we mean by $nr$, if $n \in \mathbb{Z}$ and $r \in R$ (a ring).
+                                                <li class="with-bullet"><span class="course-date col-md-1">2/12</span><span class="course-task col-md-10"> Computing inverses mod $m$. Solving linear congruences $ax\equiv b\pmod{m}$: a method that works when $\gcd(a,m)=1$, and a method for reducing to that case (or showing no solutions). Convention: What we mean by $nr$, if $n \in \mathbb{Z}$ and $r \in R$ (a ring). Binomial theorem in a general commutative ring.
                                                 </span></li>    
 
 
