--- a/4000s25.html
+++ b/4000s25.html
@@ -141,6 +141,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">2/17</span><span class="course-task col-md-10"> $\mathbb{Q}$ has our desired properties: It is a field, contains a copy of $\mathbb{Z}$ (via $n\mapsto n/1$), and every element of $\mathbb{Q}$ has the form $ab^{-1}$,  where $a, b$ belong to (our copy of) $\mathbb{Z}$. 
+                                                </span></li>    
+
                                                 <li class="with-bullet"><span class="course-date col-md-1">2/14</span><span class="course-task col-md-10"> Ring miscellany. Definition of $\mathbb{Q}$ as ordered pairs of elements of $\mathbb{Z}$ (with second element nonzero), taken up to cross-multiplication equivalence. Operations on $\mathbb{Q}$ are well-defined.
                                                 </span></li>    
 
