--- a/4000s25.html
+++ b/4000s25.html
@@ -141,7 +141,7 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
-                                                <li class="with-bullet"><span class="course-date col-md-1">2/19</span><span class="course-task col-md-10"> The set $\mathbb{Q}^{+}:= \{a/b: ab > 0\}$ is closed under $+$, closed under $\cdot$. Furthermore, each $x \in \mathbb{Q}$ satisfies exactly one of: $x \in \mathbb{Q}^{+}, $x=0$, or $-x \in \mathbb{Q}^{+}$. Thus, we can define inequalities in $\mathbb{Q}$ analogously to $\mathbb{Z}$, and the usual laws of inequalities hold. However, $1$ is not the least element of $\mathbb{Q}^{+}$.
+                                                <li class="with-bullet"><span class="course-date col-md-1">2/19</span><span class="course-task col-md-10"> The set $\mathbb{Q}^{+}:= \{a/b: ab > 0\}$ is closed under $+$, closed under $\cdot$. Furthermore, each $x \in \mathbb{Q}$ satisfies exactly one of: $x \in \mathbb{Q}^{+}$, $x=0$, or $-x \in \mathbb{Q}^{+}$. Thus, we can define inequalities in $\mathbb{Q}$ analogously to $\mathbb{Z}$, and the usual laws of inequalities hold. However, $1$ is not the least element of $\mathbb{Q}^{+}$.
                                                 </span></li>    
 
                                                 <li class="with-bullet"><span class="course-date col-md-1">2/17</span><span class="course-task col-md-10"> $\mathbb{Q}$ has our desired properties: It is a field, contains a copy of $\mathbb{Z}$ (via $n\mapsto n/1$), and every element of $\mathbb{Q}$ has the form $ab^{-1}$,  where $a, b$ belong to (our copy of) $\mathbb{Z}$. 
