--- a/4000s25.html
+++ b/4000s25.html
@@ -117,6 +117,7 @@
                                                 <h6>Assignments and other course material</h6>
                                             </div>
                                             <div class="module-content col-sm-9">                                            <ul class="course-summary-to-date">
+                                                
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #1 learning objectives/review sheet<br> (review session: Thursday, 2/20, 5:00 PM in Boyd 322)</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/exam1review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
 
@@ -141,6 +142,18 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+
+
+                                                <li class="with-bullet"><span class="course-date col-md-1">2/24</span><span class="course-task col-md-10"> Wrap up of construction of $\mathbb{Q}$. How to build $\mathbb{R}$ (non-examinable).
+                                                </span></li>    
+
+
+                                                <li class="with-bullet"><span class="course-date col-md-1">2/21</span><span class="course-task col-md-10"> Midterm #1.
+                                                </span></li>    
+
+                                                <li class="with-bullet"><span class="course-date col-md-1">2/19</span><span class="course-task col-md-10"> The set $\mathbb{Q}^{+}:= \{a/b: ab > 0\}$ is closed under $+$, closed under $\cdot$. Furthermore, each $x \in \mathbb{Q}$ satisfies exactly one of: $x \in \mathbb{Q}^{+}$, $x=0$, or $-x \in \mathbb{Q}^{+}$. Thus, we can define inequalities in $\mathbb{Q}$ analogously to $\mathbb{Z}$, and the usual laws of inequalities hold. However, $1$ is not the least element of $\mathbb{Q}^{+}$.
+                                                </span></li>    
+
                                                 <li class="with-bullet"><span class="course-date col-md-1">2/19</span><span class="course-task col-md-10"> The set $\mathbb{Q}^{+}:= \{a/b: ab > 0\}$ is closed under $+$, closed under $\cdot$. Furthermore, each $x \in \mathbb{Q}$ satisfies exactly one of: $x \in \mathbb{Q}^{+}$, $x=0$, or $-x \in \mathbb{Q}^{+}$. Thus, we can define inequalities in $\mathbb{Q}$ analogously to $\mathbb{Z}$, and the usual laws of inequalities hold. However, $1$ is not the least element of $\mathbb{Q}^{+}$.
                                                 </span></li>    
 
