--- a/research.html
+++ b/research.html
@@ -2985,6 +2985,14 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/LGP-9.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
 </li>        
 
+<li class="col-sm-12 list-item with-bullet">
+    <div class="col-sm-10">
+        <h4> <span class="paper-title">Extremal elasticity of quadratic orders</span>
+        <span class="paper-author">(w/ K. (S.) Fan)</span></h4>
+    </div>
+    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/AMS-UMI-elasticity.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+</li>        
+
 
 </ul>
                                             </div>
