--- a/4000s25.html
+++ b/4000s25.html
@@ -117,7 +117,9 @@
                                                 <h6>Assignments and other course material</h6>
                                             </div>
                                             <div class="module-content col-sm-9">                                            <ul class="course-summary-to-date">
-                                                
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #4</span><span class="col-md-2 due-date">due 3/17</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/hw4.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                </li>
+    
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #1 learning objectives/review sheet<br> (review session: Thursday, 2/20, 5:00 PM in Boyd 322)</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/exam1review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
 
@@ -143,6 +145,14 @@
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
 
+                                                <li class="with-bullet"><span class="course-date col-md-1">3/10</span><span class="course-task col-md-10"> Post Spring Break review. Statement of the division algorithm in $F[x]$ ($F$ a field). Examples. Iterating the division algorithm to perform Euclid's algorithm.
+                                                </span></li>    
+
+                                                <li class="with-bullet"><span class="course-date col-md-1">2/28</span><span class="course-task col-md-10"> Introduction to polynomials. If $R$ is a commutative ring (not the zero ring), then $R[x]$ is a commutative ring. The degree of a polynomial. If $R$ is a domain, then $\deg{fg} = \deg{f} + \deg{g}$, and $R[x]$ is a domain. Statement of the division algorithm ($F$ a field).
+                                                </span></li>    
+
+                                                <li class="with-bullet"><span class="course-date col-md-1">2/26</span><span class="course-task col-md-10"> Complex numbers. Gaussian integers. Gaussian primes.
+                                                </span></li>    
 
                                                 <li class="with-bullet"><span class="course-date col-md-1">2/24</span><span class="course-task col-md-10"> Wrap up of construction of $\mathbb{Q}$. How to build $\mathbb{R}$ (non-examinable).
                                                 </span></li>    
