--- a/4000s25.html
+++ b/4000s25.html
@@ -144,6 +144,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">3/12</span><span class="course-task col-md-10"> Example of Euclid's algorithm in action. Definition of the gcd in $F[x]$. Every pair of $a(x), b(x) \in F[x]$ have a gcd; one such gcd can be obtained by Euclid's algorithm (unless $a(x)=b(x)=0$). If $d(x)$ is a gcd, then the full set of gcds consist of all polynomials of the form $c\cdot d(x)$ for nonzero $c\in F$.
+                                                </span></li>    
 
                                                 <li class="with-bullet"><span class="course-date col-md-1">3/10</span><span class="course-task col-md-10"> Post Spring Break review. Statement of the division algorithm in $F[x]$ ($F$ a field). Examples. Iterating the division algorithm to perform Euclid's algorithm.
                                                 </span></li>    
