--- a/4000s25.html
+++ b/4000s25.html
@@ -144,6 +144,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">3/14 ($\pi$ day)</span><span class="course-task col-md-10"> Every gcd $d(x)$ of $a(x), b(x) \in F[x]$ is an $F[x]$-linear combination of $a(x), b(x)$. Definition of relatively prime. Fundamental gcd lemma in $F[x]$. Definition of prime (irreducible) in $F[x]$. An example and careful statement of unique factorization in $F[x]$.
+                                                </span></li>    
+
+
                                                 <li class="with-bullet"><span class="course-date col-md-1">3/12</span><span class="course-task col-md-10"> Example of Euclid's algorithm in action. Definition of the gcd in $F[x]$. Every pair of $a(x), b(x) \in F[x]$ have a gcd; one such gcd can be obtained by Euclid's algorithm (unless $a(x)=b(x)=0$). If $d(x)$ is a gcd, then the full set of gcds consist of all polynomials of the form $c\cdot d(x)$ for nonzero $c\in F$.
                                                 </span></li>    
 
