--- a/4000s25.html
+++ b/4000s25.html
@@ -144,6 +144,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">3/17</span><span class="course-task col-md-10"> Sketch of proof of unique factorization in $F[x]$. Remainder theorem and root factor theorem. Verifying irreducibility. Linear polynomials are always irreducible in $F[x]$. If $f(x) \in F[x]$ has degree $2$ or $3$, then $f(x)$ is irreducible if and only if $f(x)$ has no roots in $F$.
+                                                </span></li>    
+
+
                                                 <li class="with-bullet"><span class="course-date col-md-1">3/14 ($\pi$ day)</span><span class="course-task col-md-10"> Every gcd $d(x)$ of $a(x), b(x) \in F[x]$ is an $F[x]$-linear combination of $a(x), b(x)$. Definition of relatively prime. Fundamental gcd lemma in $F[x]$. Definition of prime (irreducible) in $F[x]$. An example and careful statement of unique factorization in $F[x]$.
                                                 </span></li>    
 
