--- a/research.html
+++ b/research.html
@@ -2944,6 +2944,27 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     </div>
                 </li> 
 
+                                
+                <li class="col-sm-12 list-item with-bullet">
+                    <div class="col-sm-10">
+                        <h4>    <span class="paper-title">Towards a Schinzel--Wójcik theorem for number field</span>  <span class="paper-author"></span>          </h4>
+                        <p>
+                            <a href="https://link.springer.com/journal/40879"><span class="journal-name">European J. Math.</span></a> (<span class="paper-year">to appear</span>)</p>
+                    </div>
+                    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/SW-numberfield.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+                    <div class="paper-abstract col-md-12 col-xs-12">
+                        <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paper148" aria-expanded="false" aria-controls="paper148">Abstract</a>
+                            <div class="collapse" id="paper148">
+                                <div class="well paper-abtract-content">
+                                    <p>   Schinzel and Wójcik have shown that for every $\alpha,\beta \in \mathbb{Q}^{\times}\setminus \{\pm 1\}$, there are infinitely many primes $p$ where $v_p(\alpha)=v_p(\beta)=0$ and where $\alpha$ and $\beta$ generate the same multiplicative group mod $p$. We prove a weaker result in the same direction for algebraic numbers $\alpha, \beta$. Let $\alpha, \beta \in \bar{\mathbb{Q}}^{\times}$, and suppose $|N_{\mathbb{Q}(\alpha,\beta)/\mathbb{Q}}(\alpha)|\ne 1$ and $|N_{\mathbb{Q}(\alpha,\beta)/\mathbb{Q}}(\beta)|\ne 1$. Then for some positive integer $C = C(\alpha,\beta)$, there are infinitely many prime ideals $P$ of $\Oo_{\mathbb{Q}(\alpha,\beta)}$ where $v_P(\alpha)=v_P(\beta)=0$ and where the group $\langle \beta \bmod{P}\rangle$ is a subgroup of $\langle \alpha\bmod{P}\rangle$ with $[\langle \alpha\bmod{P}\rangle: \langle \beta \bmod{P}\rangle]$ dividing $C$. A key component of the proof is a theorem of Corvaja and Zannier bounding the greatest common divisor of shifted $S$-units.</p>
+                       </div>
+                            </div>
+                        </p>
+                    </div>
+                </li> 
+
+
+
 
 
 
@@ -2958,16 +2979,6 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="paper-list list">
-
-
-
-<li class="col-sm-12 list-item with-bullet">
-    <div class="col-sm-10">
-        <h4> <span class="paper-title">Towards a Schinzel–Wójcik theorem for number fields</span>
-        <span class="paper-author"></span></h4>
-    </div>
-    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/SW-numberfield.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
-</li>        
 
 <li class="col-sm-12 list-item with-bullet">
     <div class="col-sm-10">
