--- a/4000s25.html
+++ b/4000s25.html
@@ -147,6 +147,13 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">3/24</span><span class="course-task col-md-10"> Eisenstein's irreducibility criterion. Homomorphisms between rings. The kernel of a homomorphism.
+                                                </span></li>    
+
+                                                <li class="with-bullet"><span class="course-date col-md-1">3/21</span><span class="course-task col-md-10"> Proof of rational root test. $x^4+1$ is irreducible in $\mathbb{Q}[x]$ via Gauss's lemma and the method of undetermined coefficients. Start of discussion of Eisenstein's criterion.
+                                                </span></li>    
+
+
                                                 <li class="with-bullet"><span class="course-date col-md-1">3/19</span><span class="course-task col-md-10"> If $f(x) \in F[x]$ has degree $2$ or $3$, then $f(x)$ is irreducible if and only if $f(x)$ has no roots in $F$. Examples. Start of discussion of recognizing irreducibles in $\mathbb{Q}[x]$. Statement of rational root test.
                                                 </span></li>    
 
