--- a/4000s25.html
+++ b/4000s25.html
@@ -116,8 +116,9 @@
                                             <div class="module-title col-sm-3 text-right">
                                                 <h6>Assignments and other course material</h6>
                                             </div>
-                                            <div class="module-content col-sm-9">                                            <ul class="course-summary-to-date">
-                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #5</span><span class="col-md-2 due-date">due 3/28</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                            <div class="module-content col-sm-9">                                          
+                                                  <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #5</span><span class="col-md-2 due-date">due 3/31</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
 
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #4</span><span class="col-md-2 due-date">due 3/19</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/hw4.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
@@ -147,6 +148,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">3/26</span><span class="course-task col-md-10"> $\ker(\phi)=\{0\}$ if and only if $\phi$ is injective. Definition of an ideal of a commutative ring. The kernel of a homomorphism is always an ideal. The ideals $aR$ and $\langle x_1,\dots,x_n\rangle$. What are all the ideals of $\mathbb{Z}$?
+                                                </span></li>    
+
                                                 <li class="with-bullet"><span class="course-date col-md-1">3/24</span><span class="course-task col-md-10"> Eisenstein's irreducibility criterion. Homomorphisms between rings. The kernel of a homomorphism.
                                                 </span></li>    
 
