--- a/4000s25.html
+++ b/4000s25.html
@@ -138,8 +138,9 @@
                                                 </li>
                                             	<li class="with-bullet"><span class="col-md-9 assignment-name">Handout on properties of the integers</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/integers.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
-                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Syllabus (static copy)</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/4000static.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
-                                                    </li></ul>
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Syllabus (static copy)</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/4000static.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                </li>
+                                            </ul>
                                             </div>
                                         </div>
                                         <div class="module-block row">
@@ -296,7 +297,7 @@
                                                 <p>There will be three fifty-minute <strong>in-class</strong> exams, as well as a final exam.
                                                     <ul>
                                                     <li class="with-bullet">Midterm #1: Friday, February <del>14</del> 21</li>
-                                                    <li class="with-bullet">Midterm #2: Friday, March 28</li>
+                                                    <li class="with-bullet">Midterm #2: Friday, <del>March 28</del> April 4</li>
                                                     <li class="with-bullet">Midterm #3: Friday, April 18</li>
                                                         <li class="with-bullet">Final exam: Wednesday, April 30
                                                             12:00 - 3 PM (location TBA)</li>
