--- a/4000s25.html
+++ b/4000s25.html
@@ -149,6 +149,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+
+
+                                                <li class="with-bullet"><span class="course-date col-md-1">3/28</span><span class="course-task col-md-10"> Every ideal of $\mathbb{Z}$ is principal. Every ideal of $F[x]$ ($F$ a field) is principal. Definition of the quotient ring $R/I$.
+                                                </span></li>    
+
                                                 <li class="with-bullet"><span class="course-date col-md-1">3/26</span><span class="course-task col-md-10"> $\ker(\phi)=\{0\}$ if and only if $\phi$ is injective. Definition of an ideal of a commutative ring. The kernel of a homomorphism is always an ideal. The ideals $aR$ and $\langle x_1,\dots,x_n\rangle$. What are all the ideals of $\mathbb{Z}$?
                                                 </span></li>    
 
