--- a/4000s25.html
+++ b/4000s25.html
@@ -117,6 +117,12 @@
                                                 <h6>Assignments and other course material</h6>
                                             </div>
                                             <div class="module-content col-sm-9">                                            <ul class="course-summary-to-date">
+
+
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #2 learning objectives/review sheet</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/exam2review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                </li>
+
+
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #5</span><span class="col-md-2 due-date">due 3/28</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
 
