--- a/4000s25.html
+++ b/4000s25.html
@@ -119,11 +119,8 @@
                                             <div class="module-content col-sm-9">                                          
                                                   <ul class="course-summary-to-date">
 
-
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #2 learning objectives/review sheet</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/exam2review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
-
-
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #5</span><span class="col-md-2 due-date">due 3/31</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
 
@@ -155,7 +152,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
-
+                                                <li class="with-bullet"><span class="course-date col-md-1">3/31</span><span class="course-task col-md-10"> If $F$ is a field and $m(x) \in F[x]$ has degree $n\ge 1$, then the distinct elements of $F[x]/\langle m(x)\rangle$ are the elements $a_0 + a_1\alpha + \dots + a_{n-1}\alpha^{n-1}$, for $a_0,\dots,a_{n-1}\in F$, where $\alpha = \bar{x}$. Examples of computing $F[x]/\langle m(x)\rangle$, using that $\overline{m(x)}=\bar{0}$. 
+                                                </span></li>    
 
                                                 <li class="with-bullet"><span class="course-date col-md-1">3/28</span><span class="course-task col-md-10"> Every ideal of $\mathbb{Z}$ is principal. Every ideal of $F[x]$ ($F$ a field) is principal. Definition of the quotient ring $R/I$.
                                                 </span></li>    
