--- a/4000s25.html
+++ b/4000s25.html
@@ -152,6 +152,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">4/2</span><span class="course-task col-md-10"> Definition of $\mathbb{C}$ as $\mathbb{R}[x]/\langle x^2+1\rangle$. If $m(x)$ is nonconstant and $m(x)$ is reducible, then $F[x]/\langle m(x)\rangle$ is not a domain; if $m(x)$ is irreducible, then $F[x]/\langle m(x)\rangle$ is a field. Example of computing inverses in $F[x]/\langle m(x)\rangle$. 
+                                                </span></li>    
+
                                                 <li class="with-bullet"><span class="course-date col-md-1">3/31</span><span class="course-task col-md-10"> If $F$ is a field and $m(x) \in F[x]$ has degree $n\ge 1$, then the distinct elements of $F[x]/\langle m(x)\rangle$ are the elements $a_0 + a_1\alpha + \dots + a_{n-1}\alpha^{n-1}$, for $a_0,\dots,a_{n-1}\in F$, where $\alpha = \bar{x}$. Examples of computing $F[x]/\langle m(x)\rangle$, using that $\overline{m(x)}=\bar{0}$. 
                                                 </span></li>    
 
