--- a/research.html
+++ b/research.html
@@ -3230,6 +3230,17 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="paper-list list">
+
+                                                    <li class="col-sm-12 list-item with-bullet">
+                                                        <div class="col-sm-10">
+                                                            <h4>    <span class="paper-title">How nonunique is your factorization?</span>
+                                                            </h4>
+                                                            <p><span>AMS Eastern Sectional Meeting, April 2025
+                                                            </span></p>
+                                                        </div>
+                                                        <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/AMS-CT-Elasticity.pdf" target="_blank" class="btn btn--sm btn-pdf">Slides</a></div>
+                                                    </li>
+
                                                     <li class="col-sm-12 list-item with-bullet">
                                                         <div class="col-sm-10">
                                                             <h4>    <span class="paper-title">Stretching, the truth about unique factorization</span>
