--- a/research.html
+++ b/research.html
@@ -3224,13 +3224,13 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                                                 </ul>
                                             </div>
                                         </div>
+
                                         <div class="module-block row">
                                             <div class="module-title col-sm-3 text-right">
-                                                <h6>Miscellaneous</h6>
+                                                <h6>(Non?)unique factorization</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="paper-list list">
-
                                                     <li class="col-sm-12 list-item with-bullet">
                                                         <div class="col-sm-10">
                                                             <h4>    <span class="paper-title">How nonunique is your factorization?</span>
@@ -3259,7 +3259,15 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                                                         </div>
                                                         <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/dartmouth23v3.pdf" target="_blank" class="btn btn--sm btn-pdf">Slides</a></div>
                                                     </li>
+                                            </div>
+                                        </div>
 
+                                        <div class="module-block row">
+                                            <div class="module-title col-sm-3 text-right">
+                                                <h6>Miscellaneous</h6>
+                                            </div>
+                                            <div class="module-content col-sm-9">
+                                                <ul class="paper-list list">
                                                     <li class="col-sm-12 list-item with-bullet">
                                                         <div class="col-sm-10">
                                                             <h4>    <span class="paper-title">Some distribution problems concerning arithmetic functions</span>
