--- a/4000s25.html
+++ b/4000s25.html
@@ -152,6 +152,13 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">4/7</span><span class="course-task col-md-10"> Guest lecture: Arithmetic in $\mathbb{Z}[i]$ and sums of two squares.
+                                                </span></li>    
+
+                                                <li class="with-bullet"><span class="course-date col-md-1">4/4</span><span class="course-task col-md-10"> Midterm #2.
+                                                </span></li>    
+
+
                                                 <li class="with-bullet"><span class="course-date col-md-1">4/2</span><span class="course-task col-md-10"> Definition of $\mathbb{C}$ as $\mathbb{R}[x]/\langle x^2+1\rangle$. If $m(x)$ is nonconstant and $m(x)$ is reducible, then $F[x]/\langle m(x)\rangle$ is not a domain; if $m(x)$ is irreducible, then $F[x]/\langle m(x)\rangle$ is a field. Example of computing inverses in $F[x]/\langle m(x)\rangle$. 
                                                 </span></li>    
 
