--- a/vote.html
+++ b/vote.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLSd4YNuwWzLrckM_8b8vBFaSQ9EsxP6kGBywR8beFTFpN4d0_g/viewform?usp=sharing">
+        <meta http-equiv="refresh" content="0; url=https://forms.gle/Ruu5CXc8SgKtpWjV9">
         <script type="text/javascript">
-            window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSd4YNuwWzLrckM_8b8vBFaSQ9EsxP6kGBywR8beFTFpN4d0_g/viewform?usp=sharing"
+            window.location.href = "https://forms.gle/Ruu5CXc8SgKtpWjV9"
         </script>
         <title>Page Redirection</title>
     </head> 
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://docs.google.com/forms/d/e/1FAIpQLSd4YNuwWzLrckM_8b8vBFaSQ9EsxP6kGBywR8beFTFpN4d0_g/viewform?usp=sharing'>link </a>.
+        If you are not redirected automatically, follow this <a href='https://forms.gle/Ruu5CXc8SgKtpWjV9'>link </a>.
     </body>
 </html>
