--- a/4000s25.html
+++ b/4000s25.html
@@ -118,7 +118,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">                                          
                                                   <ul class="course-summary-to-date">
-
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">A tale of four rings</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/FourRings.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #2 learning objectives/review sheet</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/exam2review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #5</span><span class="col-md-2 due-date">due 3/31</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
@@ -152,6 +153,12 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+
+                                                
+                                                <li class="with-bullet"><span class="course-date col-md-1">4/9</span><span class="course-task col-md-10"> There is no isomorphism from $\mathbb{C}$ to $\mathbb{R}$. Let $R, S$ be nonzero commutative rings. A tale of four rings: If $R\cong S$, then $R$ is a domain if and only if $S$ is a domain. Thus, a non-domain cannot be isomorphic to a domain. 
+                                                </span></li>    
+
+
                                                 <li class="with-bullet"><span class="course-date col-md-1">4/7</span><span class="course-task col-md-10"> Guest lecture (Dr. Fan): Arithmetic in $\mathbb{Z}[i]$ and sums of two squares.
                                                 </span></li>    
 
@@ -317,7 +324,7 @@
                                                     <ul>
                                                     <li class="with-bullet">Midterm #1: Friday, February <del>14</del> 21</li>
                                                     <li class="with-bullet">Midterm #2: Friday, <del>March 28</del> April 4</li>
-                                                    <li class="with-bullet">Midterm #3: Friday, April 18</li>
+                                                    <li class="with-bullet">Midterm #3: <del>Friday, April 18</del></li>
                                                         <li class="with-bullet">Final exam: Wednesday, April 30
                                                             12:00 - 3 PM (location TBA)</li>
                                                     </ul>
