--- a/4000s25.html
+++ b/4000s25.html
@@ -118,6 +118,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">                                          
                                                   <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #6</span><span class="col-md-2 due-date">due 4/25</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/hw6.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
+
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">A tale of four rings</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/FourRings.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #2 learning objectives/review sheet</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/exam2review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
@@ -154,10 +157,17 @@
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
 
-                                                
-                                                <li class="with-bullet"><span class="course-date col-md-1">4/9</span><span class="course-task col-md-10"> There is no isomorphism from $\mathbb{C}$ to $\mathbb{R}$. Let $R, S$ be nonzero commutative rings. A tale of four rings: If $R\cong S$, then $R$ is a domain if and only if $S$ is a domain. Thus, a non-domain cannot be isomorphic to a domain. 
+
+                                                <li class="with-bullet"><span class="course-date col-md-1">4/14</span><span class="course-task col-md-10"> Isomorphic rings have the same number of zero divisors. Sketch of a proof that $R$ and $S$ (from the handout) are isomorphic. Statement that two finite fields of the same size are isomorphic (no proof)
                                                 </span></li>    
 
+                                                
+                                                <li class="with-bullet"><span class="course-date col-md-1">4/11</span><span class="course-task col-md-10"> There is no isomorphism from $\mathbb{C}$ to $\mathbb{R}$. Let $R, S$ be nonzero commutative rings. A tale of four rings: If $R\cong S$, then $R$ is a domain if and only if $S$ is a domain. Thus, a non-domain cannot be isomorphic to a domain. 
+                                                </span></li>    
+
+
+                                                <li class="with-bullet"><span class="course-date col-md-1">4/9</span><span class="course-task col-md-10"> Introduction to isomorphisms. Isomorphisms are characterized as bijective maps that preserve $+$ and $\cdot$. Complex conjugation is a nontrivial isomorphism of $\mathbb{C}$ with itself (automorphism).
+                                                </span></li>    
 
                                                 <li class="with-bullet"><span class="course-date col-md-1">4/7</span><span class="course-task col-md-10"> Guest lecture (Dr. Fan): Arithmetic in $\mathbb{Z}[i]$ and sums of two squares.
                                                 </span></li>    
