--- a/4000s25.html
+++ b/4000s25.html
@@ -156,6 +156,20 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">4/21</span><span class="course-task col-md-10"> Definition of a group. Basic fats. Examples: rings under addition, units of a ring under multiplication (including the general linear and special linear groups). Definition of a commutative (abelian group). The permutation group $S_3$.
+                                                </span></li>    
+
+                                                <li class="with-bullet"><span class="course-date col-md-1">4/18</span><span class="course-task col-md-10"> Proof of the Fundamental Homomorphism Theorem. Deduction of the Chinese remainder theorem (in ring-theoretic form). Application to computing the number of units in $\mathbb{Z}_105$. 
+                                                </span></li>    
+
+                                                
+                                                <li class="with-bullet"><span class="course-date col-md-1">4/16</span><span class="course-task col-md-10"> Direct products of rings. (Re)statement of the Chinese remainder theorem in ring-theoretic terms. Necessity of the condition $\gcd(m,n)=1$. Number of solutions to $x^2=1$ in $\mathbb{Z}_{105}$.
+                                                </span></li>    
+
+
+                                                <li class="with-bullet"><span class="course-date col-md-1">4/14</span><span class="course-task col-md-10"> Isomorphic rings have the same number of zero divisors. Sketch of a proof that $R$ and $S$ (from the handout) are isomorphic. Statement that two finite fields of the same size are isomorphic (no proof)
+                                                </span></li>    
+
 
 
                                                 <li class="with-bullet"><span class="course-date col-md-1">4/14</span><span class="course-task col-md-10"> Isomorphic rings have the same number of zero divisors. Sketch of a proof that $R$ and $S$ (from the handout) are isomorphic. Statement that two finite fields of the same size are isomorphic (no proof)
