--- a/4000s25.html
+++ b/4000s25.html
@@ -156,6 +156,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+
+
+                                                <li class="with-bullet"><span class="course-date col-md-1">4/23</span><span class="course-task col-md-10"> The symmetry group of the square, $D_4$. Exponent notation. Definition of the order of an element in a group, and examples.
+                                                </span></li>    
+
                                                 <li class="with-bullet"><span class="course-date col-md-1">4/21</span><span class="course-task col-md-10"> Definition of a group. Basic fats. Examples: rings under addition, units of a ring under multiplication (including the general linear and special linear groups). Definition of a commutative (abelian group). The permutation group $S_3$.
                                                 </span></li>    
 
