add final study guide

--- a/4000s25.html
+++ b/4000s25.html
@@ -118,6 +118,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">                                          
                                                   <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Final exam study guide/course outline</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/finalreview.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
+
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #6</span><span class="col-md-2 due-date">due 4/25</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/hw6.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
 
