--- a/4000s25.html
+++ b/4000s25.html
@@ -164,10 +164,10 @@
                                                 <li class="with-bullet"><span class="course-date col-md-1">4/23</span><span class="course-task col-md-10"> The symmetry group of the square, $D_4$. Exponent notation. Definition of the order of an element in a group, and examples.
                                                 </span></li>    
 
-                                                <li class="with-bullet"><span class="course-date col-md-1">4/21</span><span class="course-task col-md-10"> Definition of a group. Basic fats. Examples: rings under addition, units of a ring under multiplication (including the general linear and special linear groups). Definition of a commutative (abelian group). The permutation group $S_3$.
+                                                <li class="with-bullet"><span class="course-date col-md-1">4/21</span><span class="course-task col-md-10"> Definition of a group. Basic fats. Examples: rings under addition, units of a ring under multiplication (including the general linear and special linear groups). Definition of a commutative (abelian) group. The permutation group $S_3$.
                                                 </span></li>    
 
-                                                <li class="with-bullet"><span class="course-date col-md-1">4/18</span><span class="course-task col-md-10"> Proof of the Fundamental Homomorphism Theorem. Deduction of the Chinese remainder theorem (in ring-theoretic form). Application to computing the number of units in $\mathbb{Z}_105$. 
+                                                <li class="with-bullet"><span class="course-date col-md-1">4/18</span><span class="course-task col-md-10"> Proof of the Fundamental Homomorphism Theorem. Deduction of the Chinese remainder theorem (in ring-theoretic form). Application to computing the number of units in $\mathbb{Z}_{105}$. 
                                                 </span></li>    
 
                                                 
