--- a/4000s25.html
+++ b/4000s25.html
@@ -159,8 +159,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
-
-
+                                                <li class="with-bullet"><span class="course-date col-md-1">4/25</span><span class="course-task col-md-10"> Every element in a group of size $n$ has order at most $n$. Observation: Empirically, order always seems to divide $n$. Lemma that if $g^m = 1$, then the order of $g$ divides $m$. Proof of the empirical observation when $G$ is abelian. Definition of cyclic subgroups. Statement of Lagrange's theorem and deduction of the observation in the general case.
+                                                </span></li>    
                                                 <li class="with-bullet"><span class="course-date col-md-1">4/23</span><span class="course-task col-md-10"> The symmetry group of the square, $D_4$. Exponent notation. Definition of the order of an element in a group, and examples.
                                                 </span></li>    
 
