--- a/research.html
+++ b/research.html
@@ -2964,7 +2964,54 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                 </li> 
 
 
+                        
+                <li class="col-sm-12 list-item with-bullet">
+                    <div class="col-sm-10">
+                        <h4>    <span class="paper-title">Revisiting the Lind--Reichardt
+counterexample to Hasse's local-global
+principle</span>  <span class="paper-author">(w/ D.B. Leep and D.B. Shapiro)</span>          </h4>
+                        <p>
+                            <a href="https://maa.org/publication/the-american-mathematical-monthly/"><span class="journal-name">Amer. Math. Monthly</span></a> (<span class="paper-year">to appear</span>)</p>
+                    </div>
+                    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/LGP-Monthly.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+                    <div class="paper-abstract col-md-12 col-xs-12">
+                        <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paper149" aria-expanded="false" aria-controls="paper149">Abstract</a>
+                            <div class="collapse" id="paper149">
+                                <div class="well paper-abtract-content">
+                                    <p>   
+We discuss what is widely believed to be the first published counterexample to the Hasse principle, presented by Hans Reichardt in 1942: The equation $X^4-17Y^4 = 2Z^2$
+has no nonzero solution in rational numbers $X,Y,Z$, but has a nonzero solution over $\mathbb{R}$ and over every $\mathbb{Q}_p$.
+We demonstrate that Reichardt's example (in fact, an infinite family of examples that contains Reichardt's) can be presented in a completely elementary way. Both local solvability and global unsolvability can be established using tools no deeper than quadratic reciprocity. For global solvability, this has long been known, but our simple and short proof of local solvability appears to be new. 
+The above counterexample is usually attributed to Cark-Erik Lind as well as Reichardt. We discuss how this claim, while correct, is <i>not correct enough</i> due to the presence of a third individual who made contributions to this problem.</p>
+                       </div>
+                            </div>
+                        </p>
+                    </div>
+                </li> 
 
+
+                        
+                <li class="col-sm-12 list-item with-bullet">
+                    <div class="col-sm-10">
+                        <h4>    <span class="paper-title">Extremal elasticity of quadratic orders</span>  <span class="paper-author">(w/ K.(S.) Fan)</span>          </h4>
+                        <p>
+                            <span class="journal-name">The ideal theory and arithmetic of rings, monoids, and semigroups (Palermo, 2024).</span> Edited by S.T. Chapman. AMS Contemporary Mathematics series (<span class="paper-year">to appear</span>)</p>
+                    </div>
+                    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/AMS-UMI-elasticity.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+                    <div class="paper-abstract col-md-12 col-xs-12">
+                        <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paper150" aria-expanded="false" aria-controls="paper150">Abstract</a>
+                            <div class="collapse" id="paper150">
+                                <div class="well paper-abtract-content">
+                                    <p>   
+ For an atomic domain $D$, the <i>elasticity</i> $\rho(D)$ of $D$ is defined as $\sup\{r/s: \pi_1\cdots \pi_r = \rho_1 \cdots \rho_s,~ \text{where each $\pi_i, \rho_j$ is irreducible}\}$; the elasticity provides a concrete measure of the failure of unique factorization in $D$. Fix a quadratic number field $K$ with discriminant $\Delta_K$, and for each positive integer $f$, let $\mathcal{O}_f = \Z + f\mathcal{O}_K$ denote the order of conductor $f$ in $K$. Results of Halter-Koch imply that $\mathcal{O}_f$ has finite elasticity precisely when $f$ is \emph{split-free}, meaning not divisible by any rational prime $p$ with $(\Delta_K/p)=1$. When $K$ is imaginary, we show that for almost all split-free $f$,
+\[ \rho(\mathcal{O}_f) = f/(\log{f})^{\frac{1}{2}\log\log\log{f} + \frac{1}{2}C_K+o(1)}, \]
+for a constant $C_K$ depending on $K$. When $K$ is real, we prove under the assumption of the Generalized Riemann Hypothesis that \[ \rho(\mathcal{O}_f)= (\log{f})^{\frac12 +o(1)} \]
+for almost all split-free $f$. Underlying these estimates are new statistical theorems about class groups of orders in quadratic fields, whose proofs borrow ideas from investigations of Erd\H{o}s, Hooley, Li, Pomerance, Schmutz, and others into the multiplicative groups $(\mathbb{Z}/m\mathbb{Z})^\times$. One novelty of the argument is the development of a weighted version of the Turán--Kubilius inequality to handle a variety of sums over split-free integers.</p>
+                       </div>
+                            </div>
+                        </p>
+                    </div>
+                </li> 
 
 
 
@@ -2988,21 +3035,15 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/TypicalElasticity.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
 </li>        
 
-<li class="col-sm-12 list-item with-bullet">
-    <div class="col-sm-10">
-        <h4> <span class="paper-title">Revisiting the Lind--Reichardt Counterexample to Hasse's Local-Global Principle</span>
-        <span class="paper-author">(w/ D.B. Leep and D.B. Shapiro)</span></h4>
-    </div>
-    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/LGP-9.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
-</li>        
 
 <li class="col-sm-12 list-item with-bullet">
     <div class="col-sm-10">
-        <h4> <span class="paper-title">Extremal elasticity of quadratic orders</span>
+        <h4> <span class="paper-title">Counting primes with a given primitive root, uniformly</span>
         <span class="paper-author">(w/ K. (S.) Fan)</span></h4>
     </div>
-    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/AMS-UMI-elasticity.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/givenprimitiveroot.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
 </li>        
+
 
 
 </ul>
