--- a/research.html
+++ b/research.html
@@ -69,7 +69,7 @@
                                                 <i class="pp-icon-doc icon icon--lg"></i> Courses
                                             </a>
                                             <ul>
-                                                <li><a href="4000s25.html">MATH 4000/6000</a></li>
+                                                <li><a href="3100f25.html">MATH 3100/3100H</a></li>
                                             </ul>
                                         </li>
 
