--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                             <i class="pp-icon-doc icon icon--lg"></i> Courses
                                         </a>
                                   <ul>
-                                              <li><a href="4000s25.html">MATH 4000/6000</a></li>
+                                              <li><a href="3100f25.html">MATH 3100/3100H</a></li>
                                             </ul>
                                     </li>
                                 </ul>
@@ -116,9 +116,9 @@
                                                 <h6>Professional Identity</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
-                                                <p>I am a Professor in the Mathematics Department at the <a href="http://www.uga.edu/">University of Georgia</a>.</p>
-                                                <p> My mathematical apprenticeship began in the late 90s as a student at the (amazing) <a href="https://rossprogram.org/">Ross Mathematics Program</a>. In 2018 and 2019 I had the privilege of teaching in China at the Ross/Asia Program. In 2020 and 2021, I was an instructor for the online Ross Program. The Ross Program resumed in-person instruction in 2022, and I was one of the lecturers at the Columbus, OH camp that summer. In 2023 and 2024, I taught at the Indiana branch of the program.</p>
-                                                <p>I am a proud member of the <a href="https://www.maa.org/">MAA</a>, <a href="https://www.ams.org/home/page">AMS</a>, <a href="https://amathr.org/">AMR</a>, <a href="https://awm-math.org/">AWM</a>, and <a href="https://heterodoxacademy.org/">HxA</a>.</p>
+                                                <p>I am a Professor in the Mathematics Department at the <a href="http://www.uga.edu/">University of Georgia</a>. As of August 1, 2025, I am the department's Director of Graduate Studies.</p>
+                                                <p> My mathematical apprenticeship began in the late 90s as a student at the (amazing) <a href="https://rossprogram.org/">Ross Mathematics Program</a>. In 2018 and 2019 I had the privilege of teaching in China at the Ross/Asia Program. In 2020 and 2021, I was an instructor for the online Ross Program. The Ross Program resumed in-person instruction in 2022, and I was one of the lecturers at the Columbus, OH camp that summer. In 2023--2025, I taught at the Indiana branch of the program.</p>
+                                                <p>I am a proud member of the <a href="https://www.maa.org/">MAA</a>, <a href="https://www.ams.org/home/page">AMS</a> (lifetime member), <a href="https://amathr.org/">AMR</a>, <a href="https://awm-math.org/">AWM</a>, and <a href="https://heterodoxacademy.org/">HxA</a>.</p>
                                                 <p>
                                                     <a class="btn btn--md bg--standard no-border-radius" href="http://pollack.uga.edu/cv.pdf">
                                                         <span class="btn__text"><i class="pp-icon-doc"></i> Curriculum Vitae</span>
@@ -137,11 +137,11 @@
                                         </div>
                                         <div class="module-block row">
                                             <div class="module-title col-sm-3 text-right">
-                                                <h6>Teaching (Fall 2024)</h6>
+                                                <h6>Teaching (Fall 2025)</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul>
-                                                    <li class="with-bullet"><a href="4000s25.html">MATH 4000/6000: Modern Algebra I</a></li>
+                                                    <li class="with-bullet"><a href="3100f25.html">MATH 3100/3100H: Introduction to Mathematical Analysis</a></li>
                                                   </ul>
                                             </div>
                                         </div>
@@ -151,6 +151,7 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul>
+                                                     <li class="with-bullet"><a href="https://akashsingharoy.github.io/">Akash Singha Roy</a> (Ph.D., 2025)</li>
                                                     <li class="with-bullet"><a href="https://www.linkedin.com/in/agbolade-akande">Agbolade Akande</a> (Ph.D., 2024)</li>
                                                     <li class="with-bullet"><a href="https://komala033.github.io/">Komal Agrawal</a> (Ph.D., 2022)</li>
                                                     <li class="with-bullet"><a href="https://www.matthewrjust.com/">Matthew Just</a> (Ph.D., 2021)</li>
