--- a/3100f25.html
+++ b/3100f25.html
@@ -268,7 +268,7 @@ Both at office hours and in class, you should expect that your input will be tre
                                                 </p>
                                                 <p>All exams are in-class, closed book, and closed notes.
                                                 </p>
-                                                <p>Homework will be collected in class, about once each week. Late homework will not be accepted. (If you have a need to turn in HW early, that can be arranged.) Your lowest HW score will be dropped at the end of the term.
+                                                <p>Homework will be collected about once each week. Late homework will not be accepted. (If you have a need to turn in HW early, that can be arranged.) Your lowest HW score will be dropped at the end of the term.
                                                 </p>
                                                 <p><strong>On homework, collaboration is allowed and in fact is very much encouraged</strong>.  Mathematics wouldn't be nearly as much fun if we couldn't talk about it with other people! However, copying (from a textbook or another student), web searches, and AI tools (such as ChatGPT) are not allowed, and you must write your own final solutions independently. Keep in mind that by entering UGA, you have already agreed to abide by the UGA Honor code described in detail at <a href="https://honesty.uga.edu/Academic-Honesty-Policy/">https://honesty.uga.edu/Academic-Honesty-Policy/</a>.
                                                 </p>
