--- a/3100f25.html
+++ b/3100f25.html
@@ -103,7 +103,8 @@
                                                     <br> 406 Boyd 
                                                 </div>
                                                 <div class="office-hours"><p>
-                                                     <strong>Office hours:</strong><br><p>TBA
+                                                     <strong>Office hours:</strong><br>
+                                                     Wednesday at 4 PM<br> more TBA!
                                                      </p>
                                                     </div>
                                                 <div class="course-notice">This page is an online copy of the syllabus. The web page will occasionally be updated with additional course materials.</div>
@@ -136,6 +137,7 @@
                                                 <ul class="course-summary-to-date">
 
 
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">8/18</span><span class="course-task col-md-10"> More on mathematical induction. PMI with a general base case. Statement of strong induction. </span></li>
                                                    
                                                 <li class="with-bullet"><span class="course-date col-sm-1">8/15</span><span class="course-task col-md-10"> Explicit vs recursive definitions of sequences, and examples. Start of discussion of mathematical induction. </span></li>
                                                 
