--- a/3100f25.html
+++ b/3100f25.html
@@ -104,7 +104,8 @@
                                                 </div>
                                                 <div class="office-hours"><p>
                                                      <strong>Office hours:</strong><br>
-                                                     Wednesday at 4 PM<br> more TBA!
+                                                     Tuesday, 4-5 PM<br>
+                                                     Wednesday, 2-3 PM<br> Friday, 2-3 PM
                                                      </p>
                                                     </div>
                                                 <div class="course-notice">This page is an online copy of the syllabus. The web page will occasionally be updated with additional course materials.</div>
